--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -133,3 +133,40 @@ img {
   justify-content: space-around;
   transform: translateZ(0px);
 }
+
+/* Search */
+
+.search-container{
+  height: 25vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 20px 10px 20px 5px rgba(0, 0, 0, 0.5);
+}
+
+.search{
+  position: relative;
+  top: 80px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.search-input{
+  border-radius: 8px;
+  border: none;
+  background-color: #fff;
+  padding: 15px;
+  width: 900px;
+  outline: none;
+  background-repeat: no-repeat;
+  background-size: 7%;
+  background-position: 4px;
+}
+
+::placeholder {
+  color:  rgb(153, 51, 255);
+  font-size: 2rem;
+  padding: 10px;
+  text-transform: capitalize;
+}
