--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -29,7 +29,6 @@ body {
 /* header */
 
 .header-container {
-
   display: grid;
   grid-gap: 5px;
   grid-template-columns: 1fr 4fr 1fr;
@@ -55,7 +54,8 @@ img {
   padding: 30px 30px 0 20px;
 }
 
-.main-nav a, .sub-nav ul li a {
+.main-nav a,
+.sub-nav ul li a {
   text-transform: capitalize;
   text-decoration: none;
   color: var(--light);
@@ -99,13 +99,10 @@ img {
   font-size: 24px;
 }
 
-.sub-nav ul li:hover, .sub-nav ul li a:hover {
-  background: linear-gradient(
-      to right,
-      rgb(0, 255, 153),
-      rgb(0, 204, 255)
-    )
-    0% 50% / 200% 50%;
+.sub-nav ul li:hover,
+.sub-nav ul li a:hover {
+  background: linear-gradient(to right, rgb(0, 255, 153), rgb(0, 204, 255)) 0%
+    50% / 200% 50%;
   padding: 5px;
   box-sizing: border-box;
   border: 1px solid var(--dark);
@@ -118,7 +115,7 @@ img {
 
 /* Search */
 
-.search-container{
+.search-container {
   height: 25vh;
   display: flex;
   flex-direction: column;
@@ -127,14 +124,14 @@ img {
   box-shadow: 20px 10px 20px 5px rgba(0, 0, 0, 0.5);
 }
 
-.search{
+.search {
   position: relative;
   top: 80px;
   display: flex;
   justify-content: space-between;
 }
 
-.search-input{
+.search-input {
   border-radius: 8px;
   border: none;
   background-color: #fff;
@@ -147,24 +144,23 @@ img {
 }
 
 ::placeholder {
-  color:  rgb(153, 51, 255);
+  color: rgb(153, 51, 255);
   font-size: 2rem;
   padding: 10px;
   text-transform: capitalize;
 }
 
-
- /* Alert */
- .alert{
-  background-color: #E50914;
+/* Alert */
+.alert {
+  background-color: #e50914;
 }
 
-.error{
+.error {
   color: #141414;
   font-size: 24px;
 }
 
-.block{
+.block {
   display: block;
 }
 
@@ -183,39 +179,37 @@ img {
 
 .box-container div img {
   border-radius: 20px;
-  transition: transform .3s; 
+  transition: transform 0.3s;
 }
 
 .box-container div img:hover {
-  transition: transform .3s;
+  transition: transform 0.3s;
   -ms-transform: scale(1.4);
-  -webkit-transform: scale(1.4);  
+  -webkit-transform: scale(1.4);
   transform: scale(1.4);
   cursor: pointer;
 
   box-shadow: 0px 10px 20px 5px rgba(0, 0, 0, 0.5);
 }
 
-.card-box-container{
-  background-color: rgba(255, 249, 170, 0.26);
-  padding: 10px;
+.card-box-container {
   border-radius: 20px;
   box-shadow: 0px 10px 20px 5px rgba(0, 0, 0, 0.5);
+  position: relative;
 }
 
-.titles{
+.titles {
   font-weight: 700;
 }
 
-@media(max-width: 900px) {
-
+@media (max-width: 900px) {
   header {
     display: grid;
     grid-gap: 20px;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-areas: 
-    "nt nt nt  .  .  . sb . . . "
-    "mn mn mn mn mn mn  mn mn mn mn";
+    grid-template-areas:
+      "nt nt nt  .  .  . sb . . . "
+      "mn mn mn mn mn mn  mn mn mn mn";
   }
 
   .box {
@@ -223,18 +217,16 @@ img {
     grid-gap: 20px;
     grid-template-columns: repeat(4, minmax(100px, 1fr));
   }
-
 }
 
-@media(max-width: 700px) {
-
+@media (max-width: 700px) {
   header {
     display: grid;
     grid-gap: 20px;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-areas: 
-    "nt nt nt  .  .  . sb . . . "
-    "mn mn mn mn mn mn  mn mn mn mn";
+    grid-template-areas:
+      "nt nt nt  .  .  . sb . . . "
+      "mn mn mn mn mn mn  mn mn mn mn";
   }
 
   .box {
@@ -248,11 +240,9 @@ img {
     grid-gap: 20px;
     grid-template-columns: repeat(3, 1fr);
   }
-   
 }
 
-@media(max-width: 500px) {
-
+@media (max-width: 500px) {
   .wrapper {
     font-size: 15px;
   }
@@ -264,10 +254,10 @@ img {
     display: grid;
     grid-gap: 20px;
     grid-template-columns: repeat(1, 1fr);
-    grid-template-areas: 
-    "nt"    
-    "mn"
-    "sb";
+    grid-template-areas:
+      "nt"
+      "mn"
+      "sb";
     text-align: center;
   }
 
@@ -293,13 +283,13 @@ img {
     display: grid;
     grid-gap: 20px;
     grid-template-columns: repeat(1, 1fr);
-    text-align: center;    
+    text-align: center;
   }
 
   .box a:hover {
-    transition: transform .3s;
+    transition: transform 0.3s;
     -ms-transform: scale(1);
-    -webkit-transform: scale(1);  
+    -webkit-transform: scale(1);
     transform: scale(1.2);
   }
 
@@ -443,6 +433,35 @@ h2 {
   margin: 10px 0px;
 }
 
+.container-description {
+  padding: 0 10px 25px 10px;
+}
+
+.button-fav-icon {
+  background: transparent;
+  border: 0;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  padding: 10px;
+}
+
+.button-fav-icon:hover {
+  cursor: pointer;
+}
+
+.button-fav-icon i {
+  font-size: 35px;
+}
+
+i {
+  color: rgb(230, 70, 182);
+}
+
+/* i::after{
+  background-color: rgb(230, 70, 182);
+} */
+
 #login-error-msg-holder {
   width: 100%;
   height: 100%;
@@ -461,7 +480,7 @@ h2 {
   color: #8a0000;
   border: 1px solid #8a0000;
   background-color: #e58f8f;
- opacity: 0;
+  opacity: 0;
 }
 
 #error-msg-second-line {
@@ -486,140 +505,138 @@ h2 {
 .footer a:hover {
   text-decoration: underline;
 }
-  /* Mobile design */
-  @media only screen and (max-width: 600px) {
-    .login__container {
-      background-color: transparent;
-      border: none;
-      padding: 0;
-      width: 100%;
-    }
-  
-    .footer {
-      align-items: flex-start;
-      flex-direction: column;
-    }
-  }
-
-  /* Register */
-
-
-  .register {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 0px 30px;
-    min-height: calc(100vh - 180px);
-    margin-top: 20px;
-  }
-  
-  h2 {
-    color: #fff;
-  }
-  
-  .register__container {
-    background-color: rgba(255, 255, 255, 0.1);
-    border: 2px solid white;
-    border-radius: 40px;
-    padding: 60px 68px 40px;
-    min-height: 500px;
-    width: 300px;
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-  }
-  
-  .register__container--form {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .register__container--form label {
-    font-size: 14px;
-  }
-  
-  .register__container--register {
-    font-size: 14px;
-    color: #fff;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-  }
-  
-  .register__container--register a {
-    color: #fff;
-    font-size: 16px;
-    font-weight: bold;
-    text-decoration: none;
-  }
-  
-  .register__container--register a:hover {
-    text-decoration: underline;
-  }
-  
-  .input {
+/* Mobile design */
+@media only screen and (max-width: 600px) {
+  .login__container {
     background-color: transparent;
-    border-left: 0px;
-    border-top: 0px;
-    border-right: 0px;
-    border-bottom: 2px solid white;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
-    margin-bottom: 20px;
-    padding: 0px 20px;
-    outline: none;
-    height: 50px;
-  }
-  
-  ::placeholder {
-    color: #fff;
-  }
-  
-  .button {
-    background-color: rgba(255, 255, 255, 0.1);
-    border-radius: 25px;
-    color: #fff;
-    cursor: pointer;
-    font-size: 16px;
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
-    height: 50px;
-    letter-spacing: 1px;
-    margin: 10px 0px;
-  }
-  
-  .footer {
-    display: flex;
-    align-items: center;
-    height: 100px;
+    border: none;
+    padding: 0;
     width: 100%;
   }
-  
-  .footer a {
-    color: #fff;
-    cursor: pointer;
-    font-size: 14px;
-    padding-left: 30px;
-    text-decoration: none;
+
+  .footer {
+    align-items: flex-start;
+    flex-direction: column;
   }
-  
-  .footer a:hover {
-    text-decoration: underline;
+}
+
+/* Register */
+
+.register {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0px 30px;
+  min-height: calc(100vh - 180px);
+  margin-top: 20px;
+}
+
+h2 {
+  color: #fff;
+}
+
+.register__container {
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 2px solid white;
+  border-radius: 40px;
+  padding: 60px 68px 40px;
+  min-height: 500px;
+  width: 300px;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+}
+
+.register__container--form {
+  display: flex;
+  flex-direction: column;
+}
+
+.register__container--form label {
+  font-size: 14px;
+}
+
+.register__container--register {
+  font-size: 14px;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+.register__container--register a {
+  color: #fff;
+  font-size: 16px;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.register__container--register a:hover {
+  text-decoration: underline;
+}
+
+.input {
+  background-color: transparent;
+  border-left: 0px;
+  border-top: 0px;
+  border-right: 0px;
+  border-bottom: 2px solid white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  margin-bottom: 20px;
+  padding: 0px 20px;
+  outline: none;
+  height: 50px;
+}
+
+::placeholder {
+  color: #fff;
+}
+
+.button {
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 25px;
+  color: #fff;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+  height: 50px;
+  letter-spacing: 1px;
+  margin: 10px 0px;
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  height: 100px;
+  width: 100%;
+}
+
+.footer a {
+  color: #fff;
+  cursor: pointer;
+  font-size: 14px;
+  padding-left: 30px;
+  text-decoration: none;
+}
+
+.footer a:hover {
+  text-decoration: underline;
+}
+
+/* Mobile design */
+@media only screen and (max-width: 600px) {
+  .register__container {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    width: 100%;
   }
-  
-  /* Mobile design */
-  @media only screen and (max-width: 600px) {
-    .register__container {
-      background-color: transparent;
-      border: none;
-      padding: 0;
-      width: 100%;
-    }
-  
-    .footer {
-      align-items: flex-start;
-      flex-direction: column;
-    }
+
+  .footer {
+    align-items: flex-start;
+    flex-direction: column;
   }
-  
+}
