--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -36,7 +36,8 @@ body {
   padding: 20px 20px 0 20px;
   position: fixed;
   top: 0;
-  background-color: var(--dark);
+  /* background-color: var(--dark); */
+  background-color: #000;
   width: 100%;
   margin-bottom: 0px;
 }
@@ -51,7 +52,7 @@ img {
 
 .main-nav {
   grid-area: mn;
-  padding: 30px 30px 0 20px;
+  padding: 5px 0px 0 20px;
 }
 
 .main-nav a,
@@ -122,6 +123,7 @@ img {
   justify-content: center;
   align-items: center;
   box-shadow: 20px 10px 20px 5px rgba(0, 0, 0, 0.5);
+  background-color: #000;
 }
 
 .search {
@@ -145,7 +147,7 @@ img {
 
 ::placeholder {
   color: rgb(153, 51, 255);
-  font-size: 2rem;
+  font-size: 1.5rem;
   padding: 10px;
   text-transform: capitalize;
 }
@@ -196,6 +198,31 @@ img {
   border-radius: 20px;
   box-shadow: 0px 10px 20px 5px rgba(0, 0, 0, 0.5);
   position: relative;
+}
+
+.box-container-favorites{
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(3, minmax(100px, 1fr));
+}
+
+.box-container-favorites img{
+  border-radius: 20px;
+  transition: transform 0.3s;
+}
+
+
+.box-container-favorites .link-favorites{
+  color: rgb(0, 255, 153);
+  font-size: 1.5rem;
+  text-decoration: none;
+  padding: 10px;
+}
+
+.box-container-favorites .link-favorites:hover{
+  cursor: pointer;
+  color: rgba(214, 13, 154, 0.6);
+  transform: scale(1.1);
 }
 
 .titles {
@@ -411,9 +438,6 @@ h2 {
   height: 50px;
 }
 
-::placeholder {
-  color: #fff;
-}
 
 .check {
   padding: 10px;
@@ -458,6 +482,14 @@ i {
   color: rgb(230, 70, 182);
 }
 
+.button-fav-icon i:hover:after,
+.button-fav-icon i.fav:after {
+  content: ' \2605';
+  color: rgb(255, 203, 0);
+}
+.button-fav-icon i.fav:hover:after {
+  content: ' \2606';
+}
 /* i::after{
   background-color: rgb(230, 70, 182);
 } */
@@ -488,9 +520,7 @@ i {
 }
 
 .footer {
-  display: flex;
-  align-items: center;
-  height: 100px;
+  height: 200px;
   width: 100%;
 }
 
@@ -504,6 +534,18 @@ i {
 
 .footer a:hover {
   text-decoration: underline;
+}
+
+.footer_description-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+}
+
+.footer-logo{
+  display: flex;
+  justify-content: center;
 }
 /* Mobile design */
 @media only screen and (max-width: 600px) {
@@ -576,67 +618,4 @@ h2 {
   text-decoration: underline;
 }
 
-.input {
-  background-color: transparent;
-  border-left: 0px;
-  border-top: 0px;
-  border-right: 0px;
-  border-bottom: 2px solid white;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 16px;
-  margin-bottom: 20px;
-  padding: 0px 20px;
-  outline: none;
-  height: 50px;
-}
 
-::placeholder {
-  color: #fff;
-}
-
-.button {
-  background-color: rgba(255, 255, 255, 0.1);
-  border-radius: 25px;
-  color: #fff;
-  cursor: pointer;
-  font-size: 16px;
-  font-weight: bold;
-  font-family: Arial, Helvetica, sans-serif;
-  height: 50px;
-  letter-spacing: 1px;
-  margin: 10px 0px;
-}
-
-.footer {
-  display: flex;
-  align-items: center;
-  height: 100px;
-  width: 100%;
-}
-
-.footer a {
-  color: #fff;
-  cursor: pointer;
-  font-size: 14px;
-  padding-left: 30px;
-  text-decoration: none;
-}
-
-.footer a:hover {
-  text-decoration: underline;
-}
-
-/* Mobile design */
-@media only screen and (max-width: 600px) {
-  .register__container {
-    background-color: transparent;
-    border: none;
-    padding: 0;
-    width: 100%;
-  }
-
-  .footer {
-    align-items: flex-start;
-    flex-direction: column;
-  }
-}
